--- a/core/build.gradle
+++ b/core/build.gradle
@@ -18,7 +18,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-
+    dataBinding {
+        enabled = true
+    }
 
     kotlin {
         experimental {
